third_party/move/move-compiler-v2/tests/verification/noverify/function_with_spec.exp

Diagnostics:
error: unresolved spec target
   ┌─ tests/verification/noverify/function_with_spec.move:15:10
   │
15 │     spec baz {
   │          ^^^
